[tool.poetry]
name = "negetis"
version = "0.1.0"
description = "Static site generator"
authors = ["Dmitry Vysochin <dmitry.vysochin@gmail.com>"]
license = "MIT"
packages = [
    { include = "negetis", from="axgrid" },
]
include = [
	"axgrid/negetis/resources"
]


[tool.poetry.dependencies]
python = "^3.5"
Click = "^7.0"
jinja2 = "^2.10"
python-i18n = {version = "^0.3.7", extras = ["YAML"]}
pyyaml = "^5.1"
werkzeug = "^0.16.0"
pytz = "^2019.3"
deepmerge = "^0.1.0"
pyyaml-include = "^1.1"
markdown = "^3.1"
asq = "^1.3"
watchdog = "^0.9.0"
deprecation = "^2.0"
python-thumbnails = "^0.5.1"
pillow = "^6.2"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.poetry.scripts]
negetis = 'axgrid.negetis.main:run'